Fixed toggle switch misalignment
Under Configuration Edit tab I fixed toggle switch misalignment issue.

--- a/FleetUI/src/app/user-management/user-management.component.css
+++ b/FleetUI/src/app/user-management/user-management.component.css
@@ -592,8 +592,8 @@ input:checked + .slider:before {
   cursor: pointer;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   background-color: #ccc;
   transition: 0.4s;
   border-radius: 28px;
